trace_decoder/src/type1/snapshots/trace_decoder__type1__witness__witness_test_vectors-4.snap
---
source: trace_decoder/src/type1/witness.rs
expression: "witness::<winnow::error::ContextError>(&mut &*vector.bytes)"
---
Ok(
    Witness {
        header: V1Header,
        instructions: NonEmpty {
            inner: [
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            3,
                            54,
                            1,
                            70,
                            32,
                            147,
                            181,
                            148,
                            93,
                            22,
                            118,
                            223,
                            9,
                            52,
                            70,
                            121,
                            15,
                            211,
                            27,
                            32,
                            231,
                            177,
                            42,
                            46,
                            142,
                            94,
                            9,
                            208,
                            104,
                            16,
                            150,
                            22,
                            176,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        10000000000000000000000,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            3,
                            70,
                            130,
                            136,
                            5,
                            99,
                            16,
                            200,
                            42,
                            164,
                            192,
                            26,
                            126,
                            18,
                            161,
                            15,
                            129,
                            17,
                            160,
                            86,
                            14,
                            114,
                            183,
                            0,
                            85,
                            84,
                            121,
                            3,
                            27,
                            134,
                            195,
                            87,
                            208,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        1,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                Hash {
                    raw_hash: [
                        26,
                        105,
                        126,
                        129,
                        71,
                        88,
                        40,
                        25,
                        114,
                        252,
                        209,
                        59,
                        201,
                        112,
                        125,
                        188,
                        210,
                        241,
                        149,
                        152,
                        107,
                        5,
                        70,
                        61,
                        123,
                        120,
                        66,
                        101,
                        8,
                        68,
                        90,
                        4,
                    ],
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            3,
                            183,
                            14,
                            128,
                            83,
                            138,
                            205,
                            171,
                            214,
                            19,
                            115,
                            83,
                            176,
                            249,
                            216,
                            209,
                            73,
                            244,
                            219,
                            169,
                            30,
                            139,
                            226,
                            231,
                            148,
                            110,
                            64,
                            155,
                            253,
                            190,
                            104,
                            91,
                            144,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        1,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            3,
                            137,
                            128,
                            45,
                            110,
                            209,
                            162,
                            139,
                            4,
                            158,
                            157,
                            79,
                            229,
                            51,
                            76,
                            89,
                            2,
                            253,
                            155,
                            192,
                            12,
                            66,
                            130,
                            28,
                            130,
                            248,
                            46,
                            226,
                            218,
                            16,
                            190,
                            144,
                            128,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        1,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            2,
                            86,
                            39,
                            74,
                            39,
                            221,
                            117,
                            36,
                            149,
                            84,
                            23,
                            193,
                            30,
                            205,
                            145,
                            114,
                            81,
                            204,
                            124,
                            76,
                            131,
                            16,
                            244,
                            199,
                            228,
                            189,
                            60,
                            48,
                            77,
                            61,
                            154,
                            121,
                        ],
                    },
                    nonce: Some(
                        2,
                    ),
                    balance: Some(
                        9998899965538478213000,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            2,
                            58,
                            176,
                            151,
                            11,
                            115,
                            137,
                            91,
                            140,
                            153,
                            89,
                            186,
                            230,
                            133,
                            195,
                            161,
                            159,
                            69,
                            235,
                            90,
                            216,
                            157,
                            66,
                            181,
                            42,
                            52,
                            14,
                            196,
                            172,
                            32,
                            77,
                            25,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        1,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                Branch {
                    mask: 4128,
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            2,
                            30,
                            236,
                            43,
                            132,
                            240,
                            186,
                            52,
                            79,
                            212,
                            180,
                            210,
                            240,
                            34,
                            70,
                            159,
                            235,
                            231,
                            167,
                            114,
                            196,
                            120,
                            154,
                            207,
                            193,
                            25,
                            235,
                            85,
                            138,
                            177,
                            218,
                            61,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        1100000000000000000,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            2,
                            118,
                            218,
                            81,
                            138,
                            57,
                            61,
                            189,
                            6,
                            125,
                            199,
                            42,
                            191,
                            160,
                            141,
                            71,
                            94,
                            214,
                            68,
                            127,
                            202,
                            150,
                            217,
                            46,
                            195,
                            249,
                            231,
                            235,
                            165,
                            3,
                            202,
                            97,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        1,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                Branch {
                    mask: 288,
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            3,
                            82,
                            104,
                            138,
                            143,
                            146,
                            108,
                            129,
                            108,
                            161,
                            224,
                            121,
                            6,
                            124,
                            171,
                            169,
                            68,
                            241,
                            88,
                            231,
                            100,
                            129,
                            123,
                            131,
                            252,
                            67,
                            89,
                            67,
                            112,
                            202,
                            156,
                            246,
                            32,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        1,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                AccountLeaf {
                    key: NonEmpty {
                        inner: [
                            3,
                            105,
                            11,
                            35,
                            155,
                            163,
                            170,
                            249,
                            147,
                            228,
                            67,
                            174,
                            20,
                            174,
                            255,
                            196,
                            76,
                            248,
                            217,
                            147,
                            26,
                            121,
                            186,
                            237,
                            159,
                            161,
                            65,
                            208,
                            228,
                            80,
                            110,
                            19,
                            16,
                        ],
                    },
                    nonce: None,
                    balance: Some(
                        1,
                    ),
                    has_code: false,
                    has_storage: false,
                },
                Branch {
                    mask: 25971,
                },
            ],
        },
    },
)
