trace_decoder/src/type1/snapshots/trace_decoder__type1__witness__witness_test_vectors-6.snap
---
source: trace_decoder/src/type1/witness.rs
expression: "witness::<winnow::error::ContextError>(&mut &*vector.bytes)"
---
Err(
    Backtrack(
        ContextError {
            context: [],
            cause: None,
        },
    ),
)
